# sharedlib

./: .gitignore  Cargo.toml  LICENSE  README.md  appveyor.yml  index.html
doc/: search-index.js
doc/define_error/: index.html  macro.define_error!.html  sidebar-items.js
doc/kernel32/: fn.AcquireSRWLockExclusive.html  fn.ActivateActCtx.html  fn.AddIntegrityLabelToBoundaryDescriptor.html  fn.AddRefActCtx.html  fn.AddScopedPolicyIDAce.html  fn.ApplicationRecoveryFinished.html  fn.Beep.html  fn.BuildCommDCBA.html  fn.BuildCommDCBAndTimeoutsW.html  fn.CallNamedPipeA.html  fn.CancelDeviceWakeupRequest.html  fn.CancelIo.html  fn.CancelIoEx.html  fn.CancelSynchronousIo.html  fn.CancelTimerQueueTimer.html  fn.CeipIsOptedIn.html  fn.CheckNameLegalDOS8Dot3W.html  fn.CheckTokenCapability.html  fn.ClearCommError.html  fn.CloseHandle.html  fn.CloseThreadpoolCleanupGroupMembers.html  fn.CloseThreadpoolIo.html  fn.CloseThreadpoolWait.html  fn.CommConfigDialogA.html  fn.CommConfigDialogW.html  fn.CompareStringA.html  fn.CompareStringEx.html  fn.CompareStringW.html  fn.ConvertDefaultLocale.html  fn.ConvertThreadToFiber.html  fn.CopyContext.html  fn.CreateBoundaryDescriptorA.html  fn.CreateBoundaryDescriptorW.html  fn.CreateConsoleScreenBuffer.html  fn.CreateDirectoryTransactedA.html  fn.CreateEventExA.html  fn.CreateEventExW.html  fn.CreateEventW.html  fn.CreateFiber.html  fn.CreateFile2.html  (+547 more)
doc/sharedlib/: enum.SharedlibError.html  index.html  sidebar-items.js  struct.Data.html  struct.DataTracked.html  struct.Func.html  struct.FuncTracked.html  struct.Lib.html  (+8 more)
src/: lib.rs
(+17907 files in other folders)
