[dependencies]
define_error = "1.0"
kernel32-sys = "0.2"
lazy_static = "0.2"
winapi = "0.2"

[package]
authors = ["Simonas Kazlauskas <git@kazlauskas.me>", "Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
build = "build.rs"
description = "A cross-platform shared library loader which is realistic about safety guarantees."
documentation = "https://tyleo.github.io/sharedlib/"
keywords = [
    "dll",
    "dynamic",
    "library",
    "shared",
    "lib"
]
license = "ISC"
name = "sharedlib"
repository = "https://github.com/Tyleo/sharedlib.git"
version = "0.2.1"
